Performed slicing and counted total no of ham and spam words

--- a/06 Bayes Classifier.ipynb
+++ b/06 Bayes Classifier.ipynb
@@ -2297,8 +2297,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 26 s, sys: 145 ms, total: 26.1 s\n",
-      "Wall time: 26.2 s\n"
+      "CPU times: user 26.2 s, sys: 179 ms, total: 26.4 s\n",
+      "Wall time: 26.6 s\n"
      ]
     }
    ],
@@ -2346,7 +2346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 62,
    "id": "db0cb8e3",
    "metadata": {},
    "outputs": [
@@ -2356,7 +2356,7 @@
        "(1896, 3)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2367,7 +2367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 63,
    "id": "05f89c1f",
    "metadata": {},
    "outputs": [],
@@ -2386,7 +2386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 64,
    "id": "f04f29cb",
    "metadata": {},
    "outputs": [
@@ -2396,7 +2396,7 @@
        "pandas.core.indexes.numeric.Int64Index"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2407,7 +2407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 65,
    "id": "6965c456",
    "metadata": {},
    "outputs": [
@@ -2417,7 +2417,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2428,7 +2428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 66,
    "id": "65e4bb3e",
    "metadata": {},
    "outputs": [],
@@ -2438,7 +2438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 67,
    "id": "9130e4e3",
    "metadata": {},
    "outputs": [
@@ -2448,7 +2448,7 @@
        "(3900,)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2459,7 +2459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 68,
    "id": "65ff4ca3",
    "metadata": {},
    "outputs": [
@@ -2475,7 +2475,7 @@
        "Name: MESSAGE, dtype: object"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2486,7 +2486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 69,
    "id": "1b127c6c",
    "metadata": {},
    "outputs": [],
@@ -2496,8 +2496,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "a3351f91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###\n",
+    "### Challanges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "aaacd6dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20972"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flat_list_ham = [item for sublist in nested_list_ham for item in sublist]\n",
+    "normal_words = pd.Series(flat_list_ham)\n",
+    "# To Find unique use value_count\n",
+    "normal_words = pd.Series(flat_list_ham).value_counts()\n",
+    "normal_words.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "6e171950",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "http      7961\n",
+       "use       3640\n",
+       "list      2888\n",
+       "one       2379\n",
+       "get       2289\n",
+       "mail      2259\n",
+       "would     2005\n",
+       "like      1932\n",
+       "messag    1857\n",
+       "work      1800\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normal_words[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "63da5617",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13945"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flat_list_spam = [item for sublist in nested_list_spam for item in sublist]\n",
+    "spammy_words = pd.Series(flat_list_spam)\n",
+    "# To Find unique use value_count\n",
+    "spammy_words = pd.Series(flat_list_spam).value_counts()\n",
+    "spammy_words.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "f528aeb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "font      20520\n",
+       "br        19865\n",
+       "nbsp      11254\n",
+       "http      10715\n",
+       "td        10654\n",
+       "b          7447\n",
+       "p          7239\n",
+       "arial      6631\n",
+       "tr         6365\n",
+       "center     4724\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spammy_words[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed84fada",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e79879e5",
    "metadata": {},
    "outputs": [],
    "source": []
